<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SudokuCell"
    android:layout_width="37dp"
    android:layout_height="37dp">

    <ToggleButton
        android:id="@+id/sudokuButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cell_button_background"
        android:button="@android:color/transparent"
        android:textOff="@string/emptybutton"
        android:textOn="@string/emptybutton"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:paddingEnd="0dp"
        android:paddingStart="0.5dp"
        android:text="@string/button1"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/two"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/pv1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/three"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/pv2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/four"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/five"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/pv4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/six"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/pv5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/seven"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pv8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/eight"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/pv7" />

    <TextView
        android:id="@+id/pv9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/nine"
        android:textColor="@android:color/transparent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/pv8" />

</android.support.constraint.ConstraintLayout>