<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <Button
        android:id="@+id/checkButton2"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbutton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <ToggleButton
        android:id="@+id/pencilButton2"
        android:layout_width="75.75dp"
        android:layout_height="22.25dp"
        android:background="@drawable/pencil_background"
        android:textOff="@string/emptybutton"
        android:textOn="@string/emptybutton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/eraserButton2" />

    <ToggleButton
        android:id="@+id/eraserButton2"
        android:layout_width="82.4dp"
        android:layout_height="49dp"
        android:background="@drawable/eraser_background"
        android:textOff="@string/emptybutton"
        android:textOn="@string/emptybutton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/checkButton2" />

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set1"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/one" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set2"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/two" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set3"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/three" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup1">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set4"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/four" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set5"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/five" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set6"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/six" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup2"
        app:layout_constraintVertical_bias="0.0">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set7"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/seven" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set8"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/eight" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set9"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/nine" />
    </RadioGroup>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/background_dark"
        app:columnCount="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="9">

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>