<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".testing">

    <Button
        android:id="@+id/checkButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/checkbutton"
        app:layout_constraintBottom_toTopOf="@+id/testingTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <ToggleButton
        android:id="@+id/pencilButton"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/pencil_background"
        android:textOff="@string/emptybutton"
        android:textOn="@string/emptybutton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/eraserButton" />

    <ToggleButton
        android:id="@+id/eraserButton"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/eraser_background"
        android:textOff="@string/emptybutton"
        android:textOn="@string/emptybutton"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/RadioGroup1"
        app:layout_constraintTop_toBottomOf="@+id/testingTable" />

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/testingTable">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set1"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/one" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set2"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/two" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set3"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/three" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroup2"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup1">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set4"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/four" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set5"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/five" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set6"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/six" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioGroup3"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.233"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroup2">

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set7"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/seven" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set8"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/eight" />

        <com.example.lamelameo.sudoku.CustomRadioButton
            android:id="@+id/Set9"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/nine" />
    </RadioGroup>

    <TableLayout
        android:id="@+id/testingTable"
        android:layout_width="343dp"
        android:layout_height="343dp"
        android:background="@drawable/gridbackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">

        </TableRow>

        <TableRow
            android:id="@+id/Row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp">

        </TableRow>

        <TableRow
            android:id="@+id/Row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>

        <TableRow
            android:id="@+id/Row9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"></TableRow>
    </TableLayout>

    <com.example.lamelameo.sudoku.SudokuCell
        android:id="@+id/sudokuCell"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:background="@drawable/cell_button_background"
        app:layout_constraintBottom_toTopOf="@+id/testingTable"
        app:layout_constraintEnd_toStartOf="@+id/checkButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

</android.support.constraint.ConstraintLayout>